<?xml version="1.0"?>
<package>
  <name>roomba_500_series</name>
  <version>0.0.0</version>
  <description>iRobot Roomba robot stack.</description>
  <maintainer email="sets92@outlook.com">sets92</maintainer>
  <author>Gonçalo Cabrita</author>
  
  <license>BSD</license>
  <url>http://ros.org/wiki/roomba_robot</url>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>cereal_port</build_depend> 
  <build_depend>actionlib_msgs</build_depend> 
 
  <run_depend>roscpp</run_depend> 
  <run_depend>message_runtime</run_depend>
  <run_depend>cereal_port</run_depend> 
  <run_depend>actionlib_msgs</run_depend> 

  <buildtool_depend>catkin</buildtool_depend>
</package>
